--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- HTML -->
     <video id="hls-example" class="video-js vjs-default-skin" width="400" height="300" controls>
-        <source type="application/x-mpegURL" src="http://localhost:8000/live/dd/index.m3u8" />
+        <source type="application/x-mpegURL" src="http://52.78.160.87:8000/live/d9a966629d501207807f69d871c23aebfecb83c0/index.m3u8" />
     </video>
     <!-- JS code -->
     <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
